--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>Our Product</h2>
             <img src="beans.jpg" alt="Beanbag chair">
             <p>Our beanbag chairs are designed to provide the ultimate comfort experience. With their plush, soft texture and variety of vibrant colors, they're the perfect addition to any room. Not only do they make a fun and cozy spot for kids to read, play, or just relax, they're also loved by adults who appreciate a bit of nostalgia and whimsy.</p>
-            <p><a href="purchase.html">Buy Now</a></p>
+            <p style="font-size:23px; "><a href="purchase.html">Buy Now!</a></p>
             </div>
 
         <div class="testimonial">
