--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="image-container">
         <img src="Sports.png" alt="Sports">
         <img src="City.jpeg" alt="City">
-        <img src="Beach.jpeg" alt="Beach">
+        <img src="Beach.png" alt="Beach">
         <img src="Club.jpeg" alt="Club">
         <img src="Map.jpeg" alt="Map">
     </div>
